add crud methods for event forms
