# src/main/java/org/bitebuilders/controller/requests/CreateFormRequest.java
@@ -1,0 +1,9 @@
+package org.bitebuilders.controller.requests;
+
+import java.util.List;
+
+public record CreateFormRequest(
+        Long eventId,
+        String title,
+        List<FieldRequest> fields
+) {}
