# src/main/java/org/bitebuilders/controller/requests/UpdateFormRequest.java
@@ -1,0 +1,8 @@
+package org.bitebuilders.controller.requests;
+
+import java.util.List;
+
+public record UpdateFormRequest(
+        String title,
+        List<FieldRequest> fields
+) {}
